clean threshold; facet-emg-hit-corr

--- a/.imdone/config.json
+++ b/.imdone/config.json
@@ -28,6 +28,10 @@
     {
       "name": "DONE",
       "hidden": false
+    },
+    {
+      "name": "IDEA",
+      "hidden": false
     }
   ],
   "marked": {
